tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@unknown_field_in_loop.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/unknown_field_in_loop.txt
---
error: Field `random` is not defined. Available fields: paragraphs, title
 --> unknown_field_in_loop.txt:3:6
  |
3 | {{ r.random }}
  |      ^^^^^^
